# fossdev

./: .gitignore  Makefile  PracticeMakefile  docker-compose.yaml  script.py  test.py
docs_domain/: Makefile
docs_domain/docs/source/: QUICKSTART.md  USAGE.rst  conf.py  index.rst
docs_domain/src/: sales.py
docs_domain/tests/: test_sales.py
file_transfer_exchanger/: Makefile
file_transfer_exchanger/docs/: context.drawio  sequence_diagram.drawio  use_cases.drawio
makutil/capp/: Makefile  app  main.c
order_service/: Dockerfile  pyproject.toml
product_service/: pyproject.toml
testing/frameworks/: setup.py
testing/frameworks/src/tax/: income.py
testing/frameworks/tax/: income.py  test_income.py
testing/frameworks/tests/tax/: test_income.py  test_income_unittest.py
testing/principle/: setup.py
testing/principle/src/: math_demo.py
testing/principle/tests/: test_principles.py
testing/tdd/: Makefile  setup.py
testing/tdd/src/: ndfl.py
testing/tdd/tests/: test_basic_ndfl.py
