[project]
name = "order-service"
version = "0.0.1"
description = "Application for serving users orders"
authors = [
    {name = "Puslore",email = "mini.big10@mail.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
