[project]
name = "order-service"
version = "0.0.1"
description = "Application for serving users orders"
authors = [
    {name = "Puslore",email = "mini.big10@mail.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.14.4"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standart] (>=0.46.0,<0.47.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
