[project]
name = "product-service"
version = "0.0.1"
description = "Application for idk"
authors = [
    {name = "Puslore",email = "mini.big10@mail.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = "3.14.4"
dependencies = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
